k8s/habits-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: habits-frontend
spec:
  type: ClusterIP
  selector:
    app: habits-frontend
  ports:
    - port: 80
      targetPort: 3000
