k8s/habits-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: habits-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: habits-postgres
  template:
    metadata:
      labels:
        app: habits-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: habits-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: habits-postgres
spec:
  type: ClusterIP
  selector:
    app: habits-postgres
  ports:
    - port: 5432
      targetPort: 5432
