k8s/habits-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habits-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - habitsbuilder.yallacooperative.com
      secretName: habits-frontend-tls
  rules:
    - host: habitsbuilder.yallacooperative.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: habits-frontend
                port:
                  number: 80
